# advent-of-code

./: .gitignore
2023/: justfile
2023/day-01/: Cargo.toml
2023/day-01/src/: lib.rs
2023/day-02/: Cargo.toml
2023/day-02/src/: lib.rs  main.rs
2023/day-03/: Cargo.toml
2023/day-03/src/: lib.rs
2023/day-04/: Cargo.toml
2023/day-04/src/: lib.rs
2023/day-05/: Cargo.toml
2023/day-05/src/: lib.rs
2023/day-06/: Cargo.toml
2023/day-06/src/: lib.rs
2023/day-07/: Cargo.toml
2023/day-07/src/: lib.rs
2023/day-08/: Cargo.toml
2023/day-08/src/: lib.rs
2023/day-09/: Cargo.toml
2023/day-09/src/: lib.rs
2023/day-10/: Cargo.toml
2023/day-10/src/: lib.rs
2023/day-11/: Cargo.toml
2023/day-11/src/: lib.rs
2023/day-12/: Cargo.toml
2023/day-12/src/: lib.rs
2023/day-13/: Cargo.toml
2023/day-13/src/: lib.rs
2023/day-14/: Cargo.toml
2023/day-14/src/: lib.rs
2023/day-15/: Cargo.toml
2023/day-15/src/: lib.rs
2023/day-16/: Cargo.toml
2023/day-16/src/: lib.rs
2023/day-17/: Cargo.toml
2023/day-17/src/: lib.rs  parse.rs
2023/day-18/: Cargo.toml
2023/day-18/src/: lib.rs
2023/day-19/: Cargo.toml
2023/day-19/src/: lib.rs
2023/day-20/: Cargo.toml
2023/day-20/src/: lib.rs
2023/day-21/: Cargo.toml
2023/rust_template/: Cargo.toml
2024/: justfile
2024/day-01/: Cargo.toml
2024/day-01/src/: lib.rs  parser.rs
2024/day-02/: Cargo.toml
2024/day-03/: Cargo.toml
2024/day-04/: Cargo.toml
2024/day-05/: Cargo.toml
2024/day-06/: Cargo.toml
2024/day-09/: Cargo.toml
2024/day-10/: Cargo.toml
2024/rust_template/: Cargo.toml
(+16 files in other folders)
