[package]
name = "day-05"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lints.clippy]
pedantic = "deny"
nursery = "deny"
unwrap_used = "deny"

[dependencies]
anyhow = "1.0.75"
itertools = "0.12.0"
rayon = "1.8.0"

[dev-dependencies]
rstest = { version = "0.18.2", default-features = false }
