[package]
name = "day-01"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lints.clippy]
pedantic = { level = "deny", priority = -1 }
nursery = { level = "deny", priority = -1 }
unwrap_used = "deny"
missing_panics_doc = "allow"
missing_errors_doc = "allow"

[dependencies]
anyhow = "1.0.93"
itertools = "0.13.0"
